Add a slide about getting rid of rvm/nvm/etc

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             </p>
             <p class="fragment">😅</p>
           </section>
+          <section>
+            <p>It also means saying goodbye to tools like...</p>
+            <ul>
+              <li><code>rvm</code></li>
+              <li><code>nvm</code></li>
+              <li><code>pyenv</code></li>
+              <li><code>virtualenv</code></li>
+            </ul>
+          </section>
         </section>
 
         <section data-background="#ffffff">
